platform/shared-services/homer/03-service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: homer
  namespace: homer
spec:
  ports:
  - port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    app: homer
  sessionAffinity: None
  type: ClusterIP
